fixed header icons and datepicker safari alignment bug

--- a/src/sass/app_2/_common/form/date_picker.scss
+++ b/src/sass/app_2/_common/form/date_picker.scss
@@ -197,7 +197,7 @@ div.datepicker-container {
         border: 1px solid $COLOR_GRAY;
         border-radius: $BORDER_RADIUS;
         font-size: 14px;
-        line-height: 32px;
+        line-height: 100%;
         vertical-align: middle;
         padding: 4px 11px;
         box-sizing: border-box;
